change map size on small screen and fixed user can post without signin

--- a/app/assets/stylesheets/stylesheet.scss
+++ b/app/assets/stylesheets/stylesheet.scss
@@ -60,6 +60,9 @@
   bottom: 0;
   width: 100%;
   height: 100%;
+  @media #{$small-only} {
+    height: 50%;
+  }
 }
 
 .search_tool {
